tests/baselines/reference/typesOnlyExternalModuleStillHasInstance.errors.txt
==== tests/cases/compiler/foo_1.ts (1 errors) ====
    import foo0 = require('./foo_0');
    // Per 11.2.3, foo_0 should still be "instantiated", albeit with no members
    
    var x: typeof foo0 = {};
    var y: {M2: Object} = foo0;
        ~~~~~~~~~~~~~~~~~~~~~~
!!! foo_1.ts(5,5): error TS2012: Cannot convert 'typeof foo0' to '{ M2: Object; }':
!!! 	Type 'typeof foo0' is missing property 'M2' from type '{ M2: Object; }'.
    
==== tests/cases/compiler/foo_0.ts (0 errors) ====
    export interface Person {
        name: string;
        age: number;
    }
    
    export module M2 {
        export interface I2 {
            x: Person;
        }
    }
    